// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should have checked=true when checked 1`] = `
<input
  checked={true}
  name="checkbox"
  type="checkbox"
  value="checkbox"
/>
`;

exports[`Checkbox should not have checked=true when unchecked 1`] = `
<input
  checked={false}
  name="checkbox"
  type="checkbox"
  value="checkbox"
/>
`;

exports[`Checkbox should shallow render 1`] = `
<input
  checked={false}
  name="checkbox"
  type="checkbox"
  value="checkbox"
/>
`;
